# bazarr

./: MANIFEST.in  MODERNIZATION.md  MODERNIZATION_COMPLETE.md  pyproject.toml  requirements.txt  test-pipx-install.sh
bazarr/: __main__.py  cli.py  launcher.py
bazarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bazarr/app/: get_args.py
dev-setup/: INSTALLATION.md  SETUP_DEV.md
