[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bazarr"
version = "1.4.3"  # Update this to match your current version
description = "Bazarr is a companion application to Sonarr and Radarr. It manages and downloads subtitles based on your requirements."
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "GPL-3.0"}
authors = [
    {name = "morpheus65535", email = "morpheus65535@gmail.com"}
]
keywords = [
    "subtitles",
    "sonarr",
    "radarr",
    "tv-shows",
    "movies"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Servers",
]

dependencies = [
    "alembic==1.14.0",
    "aniso8601==10.0.0",
    "apprise==1.9.2",
    "apscheduler<=3.10.4",
    "attrs==24.3.0",
    "blinker==1.9.0",
    "charset-normalizer==3.4.1",
    "deep-translator==1.11.4",
    "dogpile.cache==1.3.3",
    "dynaconf==3.2.6",
    "fese==0.3.0",
    "ffsubsync==0.4.27",
    "flask-cors==5.0.0",
    "flask-migrate==4.1.0",
    "flask-restx==1.3.0",
    "Flask-SocketIO==5.5.1",
    "flask_sqlalchemy==3.1.1",
    "Flask==3.1.0",
    "ga4mp==2.0.4",
    "guess_language-spirit==0.5.3",
    "guessit==3.8.0",
    "h11==0.14.0",
    "inflect==7.5.0",
    "jsonschema<=4.17.3",
    "knowit<=0.5.3",
    "lxml>=4.3.0",
    "Mako==1.3.8",
    "numpy>=1.12.0",
    "Pillow>=9.0.0",
    "plexapi>=4.16.1",
    "pycountry==24.6.1",
    "pyrsistent==0.20.0",
    "pysubs2==1.7.3",
    "python-engineio==4.11.2",
    "python-socketio==5.12.1",
    "pytz==2024.2",
    "pytz_deprecation_shim==0.1.0.post0",
    "rarfile==4.2",
    "referencing<=0.23.0",
    "requests==2.32.3",
    "semver==3.0.3",
    "signalrcore==0.9.5",
    "simple-websocket==1.1.0",
    "sqlalchemy==2.0.37",
    "textdistance==4.6.3",
    "unidecode==1.3.8",
    "waitress==3.0.2",
    "webrtcvad-wheels>=2.0.10",
    "whichcraft==0.6.1",
    "wsproto==1.2.0",
    'pywin32; platform_system == "Windows"',
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "sympy",
    "vcrpy>=1.6.1",
    "pytest",
    "pytest-pep8",
    "pytest-flakes",
    "pytest-cov",
    "pytest-vcr",
    "pytest-mock",
    "requests-mock",
]

[project.urls]
Homepage = "https://github.com/morpheus65535/bazarr"
Documentation = "https://wiki.bazarr.media"
Repository = "https://github.com/morpheus65535/bazarr.git"
Issues = "https://github.com/morpheus65535/bazarr/issues"
Discord = "https://discord.gg/MH2e2eb"

[project.scripts]
bazarr = "bazarr.cli:main"

[tool.setuptools]
packages = ["bazarr", "custom_libs", "libs"]
include-package-data = true

[tool.setuptools.package-data]
bazarr = ["**/*"]
custom_libs = ["**/*"]
libs = ["**/*"]

[tool.setuptools.data-files]
migrations = ["migrations/"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["bazarr"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
